# game-engine

./: .gitignore  CMakeLists.txt  main.cpp  monkey.fbx  scene.json
assets/: brick_plane.gltf  script.lua
include/: aabb.hpp  adapter.hpp  asset_manager.hpp  asset_store.hpp  button.hpp  camera.hpp  canvas.hpp  drawable.hpp  entity.hpp  event.hpp  event_dispatcher.hpp  event_manager.hpp  fps_camera.hpp  frame.hpp  global.hpp  gui_renderer.hpp  input.hpp  json.hpp  label.hpp  layer.hpp  layer_stack.hpp  light.hpp  lua_functions.hpp  lua_script.hpp  lua_system.hpp  lua_types.hpp  material.hpp  material_texture.hpp  mesh.hpp  model.hpp  physics_system.hpp  program.hpp  renderer.hpp  scene.hpp  scene_renderer.hpp  serializer.hpp  shader.hpp  system.hpp  text.hpp  texture.hpp  (+1 more)
shaders/: gui.frag  gui.vert  scene.frag  scene.vert  test.frag  test.vert
sources/: asset_manager.cpp  button.cpp  camera.cpp  canvas.cpp  entity.cpp  event_manager.cpp  fps_camera.cpp  global.cpp  gui_renderer.cpp  input.cpp  layer_stack.cpp  light.cpp  lua_system.cpp  main.cpp  material.cpp  material_texture.cpp  mesh.cpp  model.cpp  physics_system.cpp  program.cpp  renderer.cpp  scene.cpp  scene_renderer.cpp  serializer.cpp  shader.cpp  texture.cpp
